--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>page2</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/select2.css">
 	<link rel="stylesheet" href="css/all.css">
@@ -20,6 +20,7 @@
 						<i class="icon-phone"></i>
 					</a>
 					<a href="tel:066 12 577 654" class="phone-number">066 12 577 654</a>
+					<a href="tel:067 77 577 654" class="phone-number">067 77 577 654</a>
 				</div>
 			</div>
 		</div>
@@ -29,7 +30,7 @@
 					<a href="">Каталог товаров</a>
 					<a href="">Новинки</a>
 					<a href="">Подарки</a>
-					<a href="page2.html">Статья</a>
+					<a href="">Статья</a>
 					<a href="">Распродажа</a>
 					<a href="">Контакты</a>
 				</div>
@@ -39,9 +40,9 @@
 			<div class="container">
 				<a class="nav-prev" href="#">Предыдущая страница</a>
 				<a class="nav-prev" id="nav-prev" href="#"> &laquo; </a>
-				<div class="page-menu-link active" id="page1">Главная</div>
-				<div class="page-menu-link" id="page2">Страница 2</div>
-				<div class="page-menu-link" id="page3">Страница 3</div>
+				<div class="page-menu-link active" id="page1">Страница-2</div>
+				<div class="page-menu-link" id="page2">Страница 3</div>
+				<div class="page-menu-link" id="page3">Страница 4</div>
 				<a class="nav-next sign" id="nav-next" href="#"> &raquo; </a>
 				<a class="nav-next text" href="#">Следующая страница</a>
 			</div>
@@ -49,46 +50,6 @@
 	</div>
 	<div class="main">
 		<div class="container border-bottom">
-
-			<div class="sidebar">
-				<form action="" class="search-form">
-					<div class="row-form">
-						<input type="search">
-						<button><i class="icon-search" ></i></button>
-					</div>
-				</form>
-				<div class="block-news">
-					<h2>
-						<span>Заголовок</span> 
-						<span>Н</span><span>2</span> 
-						<span>Новости</span>
-					</h2>
-					<div class="list-news">
-						<div class="new border-bottom first">
-							<a href="" class="new-title">Модные женские часы в 2013 году!</a>
-							<div class="new-date">09.04.2013</div>
-							<div class="new-info">Для женщин стало престижно иметь не одни часы, а несколько. </div>
-						</div>
-						<div class="new border-bottom">
-							<a href="" class="new-title">Самый модный цвет 2013 года!</a>
-							<div class="new-date">08.04.2013</div>
-							<div class="new-info">Для женщин стало престижно иметь не одни часы, а несколько. </div>
-						</div>
-						<div class="new border-bottom">
-							<a href="" class="new-title">Часы женские с керамикой</a>
-							<div class="new-date">07.04.2013</div>
-							<div class="new-info">Для женщин стало престижно иметь не одни часы, а несколько. </div>
-						</div>
-					</div>
-					<div class="btn btn-primary all-news">Все новости</div>
-				</div>
-				<form action="" class="subscription-form">
-					<h2><span>Подписка</span></h2>
-					<input type="text" placeholder="Имя" requaired>
-					<input type="email" placeholder="E-mail" requaired>
-					<button class="btn">Подписаться</button>
-				</form>
-			</div>
 
 			<div class="content">
 				<div class="block-description">
@@ -98,7 +59,7 @@
 						<span>Новая коллекция ручных часов</span>
 					</h1>
 					<p>Наручные женские часы не только необходимость знания времени, но и элемент имиджа, предмет гордости, и украшение! Для женщин стало престижно иметь не одни часы, а несколько. Они ведь, несомненно, должны сочетаться с Вашим нарядом. Сплошная элегантность и роскошь, браслет и корпус инкрустированы стразами, застежка простая.</p>
-					<img src="images/main-img.jpg" alt="" class="main-img">
+					<img src="images/main-img.jpg" alt=""  class="main-img">
 					<p>Они ведь, несомненно, должны сочетаться с Вашим нарядом. Сплошная элегантность и роскошь, браслет и корпус инкрустированы стразами, застежка проста, удобна в применении.</p>
 				</div>
 
@@ -126,46 +87,14 @@
 						<div class="galary-img">
 							<img src="images/main-img.jpg" alt="">
 						</div>
-					</div>
-					<p>Часы должны сочетаться с Вашим нарядом. Сплошная элегантность и роскошь, браслет и корпус инкрустированы стразами, застежка простая:</p>
-					<ol type="1" class="galary-list-text">
-						<li>Модные женские часы в 2013 году;</li>
-						<li>Самый модный цвет 2013 года;</li>
-						<li>Часы женские с керамикой;</li>
-					</ol>
-					<p>Наручные женские часы не только необходимость знания времени, но и элемент имиджа, предмет гордости, и украшение! Для женщин стало престижно иметь не одни часы, а несколько. </p>
-				</div>
-
-				<div class="block-table border-bottom">
-					<h4>Таблица</h4>
-					<div class="table">
-						<div class="row">
-							<div class="cell">Время</div>
-							<div class="cell">Тестовое название</div>
-							<div class="cell">Название 1</div>
-							<div class="cell">Название 2</div>
-							<div class="cell"></div>
+						<div class="galary-img">
+							<img src="images/galary-img1.jpg" alt="">
 						</div>
-						<div class="row">
-							<div class="cell">9:40</div>
-							<div class="cell"><a href="">Тестовое название1</a></div>
-							<div class="cell">колличество 1</div>
-							<div class="cell">стоимость 1</div>
-							<div class="cell"><a href="">тестовая ссылка</a></div>
+						<div class="galary-img">
+							<img src="images/main-img.jpg" alt="">
 						</div>
-						<div class="row">
-							<div class="cell">11:20</div>
-							<div class="cell"><a href="">Тестовое название2</a></div>
-							<div class="cell">колличество 2</div>
-							<div class="cell">стоимость 2</div>
-							<div class="cell"><a href="">тестовая ссылка</a></div>
-						</div>
-						<div class="row">
-							<div class="cell">9:40</div>
-							<div class="cell"><a href="">Тестовое название3</a></div>
-							<div class="cell">колличество 3</div>
-							<div class="cell">стоимость 3</div>
-							<div class="cell"><a href="">тестовая ссылка</a></div>
+						<div class="galary-img">
+							<img src="images/galary-img3.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -176,13 +105,18 @@
 						<input id="tab1" type="radio" name="tabs" checked>
 						<label for="tab1" title="Вкладка 1">Активный таб</label>
 						<input id="tab2" type="radio" name="tabs">
-						<label for="tab2" title="Вкладка 2">Неактивный таб</label>
+						<label for="tab2" title="Вкладка 2">Неактивный таб-1</label>
+						<input id="tab3" type="radio" name="tabs">
+						<label for="tab3" title="Вкладка 3">Неактивный таб-2</label>
 
 						<section id="content-tab1">
 							<p>Тестовый текст в первом табе. Наручные женские часы не только необходимость знания времени, но и элемент имиджа, предмет гордости, и украшение! Для женщин стало престижно иметь не одни часы, а несколько. Они ведь, несомненно, должны сочетаться с Вашим нарядом. Сплошная элегантность и роскошь, браслет, корпус инкрустированы стразами, застежка простая.</p>
 						</section>
 						<section id="content-tab2">
 							<p>Тестовый текст во втором табе. Наручные женские часы не только необходимость знания времени, но и элемент имиджа, предмет гордости, и украшение! Для женщин стало престижно иметь не одни часы, а несколько. Они ведь, несомненно, должны сочетаться с Вашим нарядом. Сплошная элегантность и роскошь, браслет, корпус инкрустированы стразами, застежка простая.</p>
+						</section> 
+						<section id="content-tab3">
+							<p>Тестовый текст в третем табе. Наручные женские часы не только необходимость знания времени, но и элемент имиджа, предмет гордости, и украшение! Для женщин стало престижно иметь не одни часы, а несколько. Они ведь, несомненно, должны сочетаться с Вашим нарядом. Сплошная элегантность и роскошь, браслет, корпус инкрустированы стразами, застежка простая.</p>
 						</section> 
 					</div>
 				</div>
